# geomaniac-backend

./: .dockerignore  .gitignore  cspell.json  pyproject.toml
.configs/: .cSpellWords.txt
.docker/: .application.env  .db.env  .pgadmin.env  .pgadmin.servers.json  .postgresql.conf  Dockerfile  README.md  compose.app.yml  compose.db-env.yml  compose.db.yml  compose.override.yml  compose.sh  compose.yml
.github/: dependabot.yml
.github/workflows/: lint.yml
.scripts/: init-db.sh
app/: crud.py  models.py  utils.py
app/api/: deps.py  main.py
app/api/routes/: items.py  login.py  users.py
app/core/: config.py  db.py  security.py
